--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-responsive": "^9.0.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10",
