--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "aos": "^3.0.0-beta.6",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
